more build fixes